<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/item_refresh"/>
    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:title="@string/item_search"/>
    <item
        android:id="@+id/item_ext_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="never"
        android:title="@string/item_ext_search"/>
    <item
        android:icon="@drawable/ic_action_share"
        android:id="@+id/item_share"
        android:showAsAction="never"
        android:title="@string/item_share"/>
    <item
        android:id="@+id/item_info"
        android:showAsAction="never"
        android:title="@string/item_info"/>
    <item
        android:id="@+id/item_about"
        android:showAsAction="never"
        android:title="@string/item_about"/>
</menu>